added speech text

--- a/firstTest.ipynb
+++ b/firstTest.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Trump "
+    "# Trump speeches from: https://github.com/ryanmcdermott/trump-speeches"
    ]
   },
   {
