--- a/ScrapeNYTimes.ipynb
+++ b/ScrapeNYTimes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,16 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "articles = api.search(startdate=20160101)"
+    "articles = api.search(startdate=20160101, enddate=20160102)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -295,11 +297,11 @@
        "    'type_of_material': 'Front Page',\n",
        "    'web_url': 'https://query.nytimes.com/gst/abstract.html?res=9507EFDB1F3AE733A25755C0A96E9C946597D6CF',\n",
        "    'word_count': 883}],\n",
-       "  'meta': {'hits': 15528782, 'offset': 0, 'time': 326}},\n",
+       "  'meta': {'hits': 15531457, 'offset': 0, 'time': 310}},\n",
        " 'status': 'OK'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +343,7 @@
        " 'UNIONS AND BUILDERS READY FOR LONG FIGHT; None of the Strikers Back - Lock-Out Soon in Effect. 23,000 ALREADY INVOLVED Orders Sent to Every Building Employer Within Twenty-five Miles -- House-smiths Vote Not to Strike.']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "di = {u'source': b'The New York Times'}"
@@ -451,6 +455,135 @@
    ],
    "source": [
     "a = get_articles('2017', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# // Built by LucyBot. www.lucybot.com\n",
+    "# var url = \"https://api.nytimes.com/svc/archive/v1/2016/1.json\";\n",
+    "# url += '?' + $.param({\n",
+    "#   'api-key': \"e68cb4dbfc544ab9b8099f7333bb935e\"\n",
+    "# });\n",
+    "# $.ajax({\n",
+    "#   url: url,\n",
+    "#   method: 'GET',\n",
+    "# }).done(function(result) {\n",
+    "#   console.log(result);\n",
+    "# }).fail(function(err) {\n",
+    "#   throw err;\n",
+    "# });"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "NYT_api_key = 'e68cb4dbfc544ab9b8099f7333bb935e'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def getNYTMonth(year, month):\n",
+    "    request_url = 'https://api.nytimes.com/svc/archive/v1/{}/{}.json'.format(year, month)\n",
+    "    request_url += '?api-key=' + NYT_api_key\n",
+    "    response = requests.get(request_url)\n",
+    "    if not response.ok:\n",
+    "        return response\n",
+    "    json_response = json.loads(response.content)\n",
+    "    articles = [] # In format (Timestamp, Headline, Keywords)\n",
+    "    for doc in json_response['response']['docs']:\n",
+    "        try:\n",
+    "            key_words = []\n",
+    "            for key_word in doc['keywords']:\n",
+    "                key_words.append(key_word['value'])\n",
+    "            articles.append((doc['pub_date'], doc['headline']['main'], key_words))\n",
+    "        except KeyError:\n",
+    "            continue\n",
+    "    return articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "articles = getNYTMonth(2017, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for art in articles:\n",
+    "    if '$SEP$' in art[1]:\n",
+    "        print(art[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def saveArticles(articles, file_path):\n",
+    "    with open(file_path, 'w+') as f:\n",
+    "        for article in articles:\n",
+    "            f.write(str(article))\n",
+    "            f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saveArticles(articles, 'test.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(articles, open('test.pkl', 'wb'))"
    ]
   },
   {
