classifier module done

--- a/classifier/classifier.ipynb
+++ b/classifier/classifier.ipynb
@@ -13,7 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +37,8 @@
     "from keras.layers import Dense, Embedding, Conv1D, MaxPooling1D, GlobalMaxPooling1D, Dropout\n",
     "from keras.models import Sequential\n",
     "from keras import regularizers, optimizers\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.callbacks import EarlyStopping\n",
+    "import pickle"
    ]
   },
   {
@@ -139,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "766it [00:00, 7655.32it/s]"
+      "676it [00:00, 6758.28it/s]"
      ]
     },
     {
@@ -153,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "999995it [01:44, 9588.25it/s] "
+      "999995it [01:51, 8951.80it/s]"
      ]
     },
     {
@@ -303,7 +313,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Donald Trump: Missing FBI Texts ‘One of the Biggest Stories in a Long Time’'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all.iloc[2]['headline']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -332,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -381,15 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample words not found:  ['toutant' 'adama' 'hulaween' 'finnerty' 'apax' 'keefe' 'gaymerx' '发生的时候'\n",
-      " 'mandvi' 'dbacks']\n"
+      "sample words not found:  ['nitka' 'strampel' 'zamata' 'wojcicki' 'welty' 'angulo' 'wolfson'\n",
+      " 'fybish' 'miazga' 'kusama']\n"
      ]
     }
    ],
@@ -399,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -418,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -430,21 +460,21 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_2 (Embedding)      (None, 20, 300)           19123800  \n",
+      "embedding_1 (Embedding)      (None, 20, 300)           19123800  \n",
       "_________________________________________________________________\n",
-      "conv1d_3 (Conv1D)            (None, 20, 64)            134464    \n",
+      "conv1d_1 (Conv1D)            (None, 20, 64)            134464    \n",
       "_________________________________________________________________\n",
-      "max_pooling1d_2 (MaxPooling1 (None, 10, 64)            0         \n",
+      "max_pooling1d_1 (MaxPooling1 (None, 10, 64)            0         \n",
       "_________________________________________________________________\n",
-      "conv1d_4 (Conv1D)            (None, 10, 64)            28736     \n",
+      "conv1d_2 (Conv1D)            (None, 10, 64)            28736     \n",
       "_________________________________________________________________\n",
-      "global_max_pooling1d_2 (Glob (None, 64)                0         \n",
+      "global_max_pooling1d_1 (Glob (None, 64)                0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 64)                0         \n",
+      "dropout_1 (Dropout)          (None, 64)                0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 32)                2080      \n",
+      "dense_1 (Dense)              (None, 32)                2080      \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 2)                 66        \n",
+      "dense_2 (Dense)              (None, 2)                 66        \n",
       "=================================================================\n",
       "Total params: 19,289,146\n",
       "Trainable params: 165,346\n",
@@ -473,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -494,16 +524,18 @@
      "text": [
       "Train on 217482 samples, validate on 24165 samples\n",
       "Epoch 1/10\n",
-      "217482/217482 [==============================] - 8s 37us/step - loss: 0.1624 - acc: 0.9392 - val_loss: 0.1826 - val_acc: 0.9295\n",
+      "217482/217482 [==============================] - 56s 257us/step - loss: 0.2982 - acc: 0.8738 - val_loss: 0.2188 - val_acc: 0.9087\n",
       "Epoch 2/10\n",
-      "217482/217482 [==============================] - 8s 36us/step - loss: 0.1222 - acc: 0.9557 - val_loss: 0.1774 - val_acc: 0.9336\n",
+      "217482/217482 [==============================] - 57s 261us/step - loss: 0.1904 - acc: 0.9262 - val_loss: 0.1833 - val_acc: 0.9263\n",
       "Epoch 3/10\n",
-      "217482/217482 [==============================] - 8s 36us/step - loss: 0.0942 - acc: 0.9665 - val_loss: 0.1974 - val_acc: 0.9340\n",
+      "217482/217482 [==============================] - 55s 253us/step - loss: 0.1394 - acc: 0.9491 - val_loss: 0.1771 - val_acc: 0.9347\n",
       "Epoch 4/10\n",
-      "217482/217482 [==============================] - 8s 36us/step - loss: 0.0729 - acc: 0.9745 - val_loss: 0.2095 - val_acc: 0.9338\n",
+      "217482/217482 [==============================] - 55s 251us/step - loss: 0.1059 - acc: 0.9624 - val_loss: 0.1852 - val_acc: 0.9337\n",
       "Epoch 5/10\n",
-      "217482/217482 [==============================] - 8s 37us/step - loss: 0.0592 - acc: 0.9793 - val_loss: 0.2245 - val_acc: 0.9348\n",
-      "Epoch 00005: early stopping\n"
+      "217482/217482 [==============================] - 55s 253us/step - loss: 0.0824 - acc: 0.9706 - val_loss: 0.2006 - val_acc: 0.9355\n",
+      "Epoch 6/10\n",
+      "217482/217482 [==============================] - 58s 264us/step - loss: 0.0650 - acc: 0.9773 - val_loss: 0.2203 - val_acc: 0.9335\n",
+      "Epoch 00006: early stopping\n"
      ]
     }
    ],
@@ -519,13 +551,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20000/20000 [==============================] - 2s 101us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.22394629516601564, 0.931125]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(test_X[:20000], test_y[:20000], batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "model.predict()"
+    "model.save('model.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('tokenizer', 'wb') as f:\n",
+    "    pickle.dump(tokenizer, f)"
    ]
   }
  ],
